# snake

./: CMakeLists.txt  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
glm/gtx/: io.inl
include/camera/: camera.cpp  camera.hpp
include/game/: block.cpp  block.hpp  board.hpp  snake.hpp
include/render/: renderObject.cpp
include/setup/: window.cpp  window.hpp
include/shader/: shader.cpp  shader.hpp
lib/glad/src/: glad.c
lib/glm/: CMakeLists.txt
shaders/: sampleVS.glsl
src/: main.cpp
